apps/longhorn-system/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-server
  namespace: longhorn-system
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway
      sectionName: http
    - name: internal-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - longhorn.injunweb.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
